Made mutliple improvements Adjusted SEO Added About info Adjusted Contact info improved sitemap

--- a/contact.html
+++ b/contact.html
@@ -11,14 +11,14 @@
     <meta property="og:url" content="https://digira.xyz/contact.html">
     <meta property="og:title" content="Contact Us | Digira Esports">
     <meta property="og:description" content="Contact Digira Esports for tournament inquiries, partnerships, or general questions. Reach out via email, Discord, or social media.">
-    <meta property="og:image" content="https://digira.xyz/placeholder-logo.png">
+    <meta property="og:image" content="https://digira.xyz/assets/logo.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://digira.xyz/contact.html">
     <meta property="twitter:title" content="Contact Us | Digira Esports">
     <meta property="twitter:description" content="Contact Digira Esports for tournament inquiries, partnerships, or general questions. Reach out via email, Discord, or social media.">
-    <meta property="twitter:image" content="https://digira.xyz/placeholder-logo.png">
+    <meta property="twitter:image" content="https://digira.xyz/assets/logo.png">
 
     <script type="application/ld+json">
     {
