--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <meta property="og:url" content="https://digira.xyz/">
     <meta property="og:title" content="Digira Esports | Kathmandu's Premier Gaming Community">
     <meta property="og:description" content="Digira Esports - Nepal's premier youth-led esports organization based in Kathmandu. Join tournaments, build community, and compete.">
-    <meta property="og:image" content="https://digira.xyz/placeholder-logo.png">
+    <meta property="og:image" content="https://digira.xyz/assets/logo.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://digira.xyz/">
     <meta property="twitter:title" content="Digira Esports | Kathmandu's Premier Gaming Community">
     <meta property="twitter:description" content="Digira Esports - Nepal's premier youth-led esports organization based in Kathmandu. Join tournaments, build community, and compete.">
-    <meta property="twitter:image" content="https://digira.xyz/placeholder-logo.png">
+    <meta property="twitter:image" content="https://digira.xyz/assets/logo.png">
 
     <script type="application/ld+json">
     {
