--- a/partners.html
+++ b/partners.html
@@ -11,14 +11,14 @@
     <meta property="og:url" content="https://digira.xyz/partners.html">
     <meta property="og:title" content="Partners & Sponsors | Digira Esports">
     <meta property="og:description" content="Partner with Digira Esports and support Nepal's growing esports community. Sponsorship opportunities available.">
-    <meta property="og:image" content="https://digira.xyz/placeholder-logo.png">
+    <meta property="og:image" content="https://digira.xyz/assets/logo.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://digira.xyz/partners.html">
     <meta property="twitter:title" content="Partners & Sponsors | Digira Esports">
     <meta property="twitter:description" content="Partner with Digira Esports and support Nepal's growing esports community. Sponsorship opportunities available.">
-    <meta property="twitter:image" content="https://digira.xyz/placeholder-logo.png">
+    <meta property="twitter:image" content="https://digira.xyz/assets/logo.png">
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     <title>Partners & Sponsors | Digira Esports</title>
     
