Numerous changes made: Edited the wrong urls of the social medias to the correct ones fixed the form and made it a working form added the information of the upcoming Mobile Legends TOurnament

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Digira Esports - Nepal's premier youth-led esports organization based in Kathmandu. Join tournaments, build community, and compete.">
+    <meta name="keywords" content="digira esports, digira esports nepal, digira xyz, digira esports xyz, esports nepal, kathmandu esports, nepal gaming community, competitive gaming nepal, pubg mobile nepal, valorant nepal, free fire nepal, mobile legends nepal, esports tournaments nepal, youth esports organization">
     <link rel="canonical" href="https://digira.xyz/">
 
     <!-- Open Graph / Facebook -->
@@ -34,7 +35,7 @@
         "addressCountry": "NP"
       },
       "sameAs": [
-        "https://discord.gg/digira",
+        "https://discord.gg/JtH8SkgnPu",
         "https://instagram.com/digira.esports",
         "https://facebook.com/digira.esports",
         "https://youtube.com/@digira.esports"
@@ -89,7 +90,7 @@
             <p class="hero-description hero-description-animated">Turning Gamers to Champions</p>
             <p class="hero-tagline hero-tagline-animated">Fueling Kathmandu's Esports Scene</p>
             <div class="hero-cta">
-                <a href="https://discord.gg/digira" target="_blank" rel="noopener" class="btn btn-primary hero-btn-animated">Join Our Discord</a>
+                <a href="https://discord.gg/JtH8SkgnPu" target="_blank" rel="noopener" class="btn btn-primary hero-btn-animated">Join Our Discord</a>
                 <a href="events.html" class="btn-text hero-btn-animated" style="animation-delay: 0.1s;">View Events →</a>
             </div>
         </div>
@@ -144,14 +145,14 @@
                     </div>
                     <div class="event-detail-item">
                         <span class="detail-label">Date:</span>
-                        <span class="detail-value">TBD</span>
+                        <span class="detail-value">3<sup>rd</sup> & 4<sup>th</sup> Magh</span>
                     </div>
                     <div class="event-detail-item">
                         <span class="detail-label">Prize Pool:</span>
-                        <span class="detail-value">NPR ??,000</span>
+                        <span class="detail-value">NPR 35,000</span>
                     </div>
                 </div>
-                <a href="/events.html" class="btn btn-primary">Register Now</a>
+                <a href="https://forms.gle/eHfB3cHkfk8BR8qH9" class="btn btn-primary">Register Now</a>
             </div>
         </div>
     </section>
@@ -178,7 +179,7 @@
             <h2>Ready to Compete?</h2>
             <p class="cta-subtitle">Join our growing community of competitive gamers in Kathmandu</p>
             <div class="cta-buttons">
-                <a href="https://discord.gg/digira" target="_blank" rel="noopener" class="btn btn-primary">Join Discord</a>
+                <a href="https://discord.gg/JtH8SkgnPu" target="_blank" rel="noopener" class="btn btn-primary">Join Discord</a>
                 <a href="events.html" class="btn btn-secondary">View Tournaments</a>
             </div>
         </div>
@@ -207,24 +208,24 @@
                 <div class="footer-social">
                     <h4>Connect With Us</h4>
                     <div class="social-links">
-                        <a href="https://discord.gg/digira" target="_blank" rel="noopener" aria-label="Discord">
+                        <a href="https://discord.gg/JtH8SkgnPu" target="_blank" rel="noopener" aria-label="Discord">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M9 12h.01M15 12h.01M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0z"/>
                             </svg>
                         </a>
-                        <a href="https://instagram.com/digiraesports" target="_blank" rel="noopener" aria-label="Instagram">
+                        <a href="https://instagram.com/digira.esports" target="_blank" rel="noopener" aria-label="Instagram">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
                                 <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
                                 <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
                             </svg>
                         </a>
-                        <a href="https://facebook.com/digiraesports" target="_blank" rel="noopener" aria-label="Facebook">
+                        <a href="https://facebook.com/profile.php?id=61585461581381" target="_blank" rel="noopener" aria-label="Facebook">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
                             </svg>
                         </a>
-                        <a href="https://youtube.com/@digiraesports" target="_blank" rel="noopener" aria-label="YouTube">
+                        <a href="https://youtube.com/@digira.esports" target="_blank" rel="noopener" aria-label="YouTube">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.33z"></path>
                                 <polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02"></polygon>
