--- a/events.html
+++ b/events.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Join Digira Esports tournaments and compete in Mobile Legends, PUBG Mobile, and more competitive gaming events in Kathmandu.">
+    <meta name="keywords" content="digira esports, digira esports nepal, digira xyz, digira esports xyz, esports nepal, kathmandu esports, nepal gaming community, competitive gaming nepal, pubg mobile nepal, valorant nepal, free fire nepal, mobile legends nepal, esports tournaments nepal, youth esports organization">
     <meta name="robots" content="noindex, nofollow">
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     <title>Events & Tournaments | Digira Esports</title>
@@ -60,12 +61,12 @@
                     <ul class="event-info-list">
                         <li><strong>Game:</strong> Mobile Legends Bang Bang</li>
                         <li><strong>Format:</strong> 5v5 Tournament</li>
-                        <li><strong>Date:</strong> TBD</li>
-                        <li><strong>Prize Pool:</strong> NPR ??,000</li>
-                        <li><strong>Slots:</strong> 32 Teams</li>
+                        <li><strong>Date:</strong> 3<sup>rd</sup> & 4<sup>th</sup> Magh</li>
+                        <li><strong>Prize Pool:</strong> NPR 35,000</li>
+                        <li><strong>Slots:</strong> 48 Teams</li>
                     </ul>
                     
-                    <a href="contact.html" class="btn btn-primary">Register Now</a>
+                    <a href="https://forms.gle/eHfB3cHkfk8BR8qH9" class="btn btn-primary">Register Now</a>
                 </div>
 
                 <!-- Event Card 2 -->
@@ -134,7 +135,7 @@
                         <h3>Mobile Legends Winter Cup</h3>
                         <span class="timeline-date">December 2024</span>
                         <p><strong>Winner:</strong> <span class="winner-highlight">Team Phoenix</span></p>
-                        <p>32 Teams competed in an intense 5v5 tournament with NPR 20,000 prize pool</p>
+                        <p>48 Teams competed in an intense 5v5 tournament with NPR 20,000 prize pool</p>
                     </div>
                 </div>
                 
@@ -187,24 +188,24 @@
                 <div class="footer-social">
                     <h4>Connect With Us</h4>
                     <div class="social-links">
-                        <a href="https://discord.gg/digira" target="_blank" rel="noopener" aria-label="Discord">
+                        <a href="https://discord.gg/JtH8SkgnPu" target="_blank" rel="noopener" aria-label="Discord">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M9 12h.01M15 12h.01M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0z"/>
                             </svg>
                         </a>
-                        <a href="https://instagram.com/digiraesports" target="_blank" rel="noopener" aria-label="Instagram">
+                        <a href="https://instagram.com/digira.esports" target="_blank" rel="noopener" aria-label="Instagram">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
                                 <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
                                 <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
                             </svg>
                         </a>
-                        <a href="https://facebook.com/digiraesports" target="_blank" rel="noopener" aria-label="Facebook">
+                        <a href="https://facebook.com/profile.php?id=61585461581381" target="_blank" rel="noopener" aria-label="Facebook">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
                             </svg>
                         </a>
-                        <a href="https://youtube.com/@digiraesports" target="_blank" rel="noopener" aria-label="YouTube">
+                        <a href="https://youtube.com/@digira.esports" target="_blank" rel="noopener" aria-label="YouTube">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.33z"></path>
                                 <polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02"></polygon>
